stylesheets/serious.css
/* ... */
.gallerytable tr td {

    padding: 0; 
    margin:0;
    height: 400px;
}

.gallerytable tr td a img {
    max-height: 350px;
    padding: 0;
    margin: 0;
}
#showContent {
    width: auto;
    /* max-width: 600px; 
  margin: 0 auto;  */
    padding-left: 25%;
    max-width: 60%;
    min-width: 30%;
    z-index: 400;
}

.projectpic {
    width: 50%;
    height: 50%;
}
#showContent img {
    border: 2px solid;
    border-radius: 30px;
    border-color: transparent;
    max-width: 100%;
}
.submenu {
    padding: 0;
    position: absolute;
    top: 48px;
    left: 3%;
    width: auto;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    display: none !important;
    opacity: 0 !important;
    visibility: hidden !important;
    transition-property: visibility;
    transition-duration: 5s;
    transition-delay: 2s;
    border: 1px thin;
    border-radius: 30px;
    border-color: transparent;
    background: -moz-linear-gradient(-45deg, rgba(247, 54, 54, 0.23) 0%, rgba(242, 41, 26, 0.2) 100%);
    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(247, 54, 54, 0.23)), color-stop(100%, rgba(242, 41, 26, 0.2)));
    background: -webkit-linear-gradient(-45deg, rgba(247, 54, 54, 0.23) 0%, rgba(242, 41, 26, 0.2) 100%);
    background: -o-linear-gradient(-45deg, rgba(247, 54, 54, 0.23) 0%, rgba(242, 41, 26, 0.2) 100%);
    background: -ms-linear-gradient(-45deg, rgba(247, 54, 54, 0.23) 0%, rgba(242, 41, 26, 0.2) 100%);
    background: linear-gradient(135deg, rgba(247, 54, 54, 0.23) 0%, rgba(242, 41, 26, 0.2) 100%);
    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#3bf73636', endColorstr='#33f2291a', GradientType=1);
}
#onTopImg:hover {
    animation: bounceit 3s infinite linear;
    -webkit-animation: bounceit 3s infinite linear;
}
#scroller {
    position: absolute;
    float: left;
    height: 100%;
    max-width: 22%;
    min-width: 14%;
    /* border: 2px solid; */
}
#top {
    position: absolute;
    bottom: 20px;
    margin-left: 2%;
    float: bottom;
    max-height: 17%;
    overflow: hidden;
}
#toc {
    margin-left: 2%;
    max-height: 75%;
    overflow-y: auto;
    overflow-x: auto;
}
#toc ul li a {
    color: #ff0000;
    width: auto;
    max-width: 10%;
}
#toc ul li a:hover {
    color: blue;
}
#toc ul li:before {
    content: ">";
    color: red;
}
.submenu li {
    display: block;
    margin-top: 2px;
    padding-left: 50px;
    margin-left: 30px;
    text-shadow: 0 -1px 0 #000;
}
.dropdowncontainer {
    font: bold 12px/18px sans-serif;
    display: inline-block;
    position: relative;
    /* padding: 5px 50px; */
    padding-bottom: 15px;
    padding-top: 5px;
    cursor: pointer;
    z-index: 555;
    transition-property: display;
    transition-duration: 5s;
    transition-delay: 2s;
}
.dropdowncontainer:hover > .submenu {
    display: block !important;
    opacity: 1 !important;
    visibility: visible !important;
}
.submenu:hover > .submenu {
    display: block !important;
    opacity: 1 !important;
    visibility: visible!important;
}
@keyframes bounceit {
    0% {
        transform: scale(1);
    }
    25% {
        transform: scale(.8);
    }
    50% {
        transform: scale(1);
    }
    75% {
        transform: scale(.9);
    }
    100% {
        transform: scale(1);
    }
}
@-webkit-keyframes bounceit {
    0% {
        -webkit-transform: scale(1);
    }
    25% {
        -webkit-transform: scale(.90);
    }
    50% {
        -webkit-transform: scale(1);
    }
    75% {
        -webkit-transform: scale(.95);
    }
    100% {
        -webkit-transform: scale(1);
    }
}
.dropdowncontainer:before {
    content: "";
    display: inline-block;
    /* margin-left: -25px; */
    padding-left: 25px;
    padding-right: 1px;
    /*line-height: 16px; */
}
.dropdowncontainer:hover > .submenu li:before {
    opacity: 1;
    content: "";
}
#aboutImg {
    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
    /* Firefox 10+, Firefox on Android */
    -webkit-filter: grayscale(100%);
    -moz-filter: grayscale(100%);
    -ms-filter: grayscale(100%);
    filter: grayscale(100%);
    /* IE 6-9 */
    z-index: 444;
    width: 185px;
    max-width: 800px;
    height: 200px;
    transition: width 2s, height 2s, transform 2s, effect 4s;
}
#aboutImg:active {
    -webkit-animation: bounceImage infinite linear;
    animation: bounceImage 3s infinite linear;
    -moz-animation: bounceImage 3s infinite linear;
}
#aboutImg:not(:active) {
    -webkit-animation: none;
    animation: none;
    -moz-animation: none;
}
#aboutImg:hover {
    -webkit-filter: none;
    -moz-filter: none;
    -ms-filter: none;
    filter: none;
    cursor: pointer;
}
@-moz-keyframes spin {
    100% {
        -moz-transform: rotate(720deg);
    }
}
@-webkit-keyframes spin {
    100% {
        -webkit-transform: rotate(720deg);
    }
}
@keyframes spin {
    100% {
        transform: rotate(720deg);
    }
}
@keyframes bounceImage {
    0% {
        initial;
    }
    25% {
        transform: rotate(10deg);
    }
    50% {
        initial;
    }
    75% {
        transform: rotate(-10deg);
    }
}
@-webkit-keyframes bounceImage {
    0% {
        -webkit-initial;
    }
    25% {
        -webkit-transform: rotate(10deg);
    }
    50% {
        -webkit-initial;
    }
    75% {
        -webkit-transform: rotate(-10deg);
    }
}
#menucontent {} section {
    display: block;
    margin: 0 0 20px 0;
}
li {
    line-height: 1.4;
}
/* Header, <header>
   header   - container
   h1       - project name
   h2       - project description
*/

.anchor {
    top: -125px;
    display: inline; position: relative;
}

header {
    width: 100%;
    padding: 20px 0;
    margin: 0 0 40px 0;
}
/* ... */

